# equilibrium-engine

./: .gitattributes  .gitignore  AI_USAGE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
calibration/: calibrate_burst.py  calibrate_moral.py  calibrated_burst.yaml  calibrated_layer1.yaml  calibrated_layer2.yaml  calibrated_recovery.yaml  calibrated_thresholds.yaml  calibrated_timescale.yaml  defaults.yaml  moral_calibration_report.md  moral_calibration_survivors.json  moral_corpus_residual_rejudge.txt  moral_corpus_residual_verdict.json  moral_corpus_verdict.json  moral_halflife_verdict.json  moral_judge_verdict.json  moral_judge_vignettes.txt  moral_multiday_arcs.txt  moral_multiday_verdict.json  moral_overlay.yaml  moral_suspicion_arcs.txt  timescale_ground_truth.yaml
docs/: HOWTO_change_tick_dt.md  burst_M20.1_status.md  burst_calibration_plan.md  control_interpretation.md  m_mem_PLAN.md  moral_calibration_plan.md  moral_tension_PLAN.md  moral_tension_impl_spec.md  moral_tension_review.md  moral_tension_test_plan.md  rpg_persona_dynamics_persony.md  rpg_persona_dynamics_scenariusze.md  rpg_persona_dynamics_spec_v1.md  timescale.md
engine/: __init__.py  action_selector.py  affinity_field.py  affinity_filter.py  calibration.py  clamp.py  debug.py  derived.py  diagnostics.py  expectations.py  filters.py  history.py  loss.py  mapper.py  metrics.py  potentials.py  relation_filter.py  runtime.py  schema.py  simulation.py  stability.py  update.py  yaml_io.py
eval/: BELIEVABILITY_REPORT.html  BELIEVABILITY_REPORT.md  MORAL_REPORT.md  (+49 more)
(+3269 files in other folders)
